# Big103-HTML

./: .gitignore  CMakeLists.txt  CMakeLists.txt.olde  README.md
res/: Icon.rc  resource.h  sourceURL.txt  webhookURL.txt
src/: big103.cpp  big103.h  dpi_linux.h  dpi_windows.h  starter.cpp  titlebar.h  window.cpp  window.h
